dark mode fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,16 +3,16 @@
 @tailwind utilities;
 
 :root {
-	--foreground-rgb: 0, 0, 0;
+	--foreground-rgb: 255, 255, 255; /* Default text color as white */
 	--background-start-rgb: 214, 219, 220;
 	--background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 	:root {
-		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
+		--foreground-rgb: 0, 0, 0; /* Text color in dark mode */
+		--background-start-rgb: 0, 0, 0; /* Background color in dark mode */
+		--background-end-rgb: 0, 0, 0; /* Background color in dark mode */
 	}
 }
 
